# robocoin-dataset

./: .gitignore  .gitmodules  .pre-commit-config.yaml  G1_multi_camera_auto_detection.md  HDF5_config_completion_report.md  README.md  deep_bson_analysis.py  episode_subdirectory_solution.md  pyproject.toml
db/: datasets.db  test.yaml
examples/: example_1.py
examples/configs/: convert_csv_tags_to_yamls.yml  gen_info.yml  gen_readme.yml  upload2hf.yml  upload2ms.yml
examples/csv_tags/: test_tags.csv
examples/example_datas/example_dataset_1/: .commit_message  README.md
examples/example_datas/example_dataset_2/: .commit_message  README.md
examples/outputs/yaml_tags/: realman_task_build_blocks_500_4.18.yml  realman_task_stack_basket_500_4.27.yml
examples/scripts/: download_hf.sh  download_ms.sh  gen_info.sh  gen_readme.sh  upload_hf.sh  upload_ms.sh
examples/scripts/miscellaneous/: convert_csv_tags_to_yamls.sh
outputs/collected_dataset_infos/: local_dataset_info_hub.yml
outputs/test/collected_dataset_statics/: local_dataset_info_1.yml
scripts/: convert_csv_tags_to_yamls.py  gen_readme.py
scripts/annotation/: device_model_annotation.py  subtask_annotation_multi_client.py  subtask_annotation_server.py
scripts/dataset_collector/: collect_dataset_info_files.py
scripts/db/: import_dataset_info_from_yaml.py  init_db.py
scripts/format_converters/tolerobot/: check_single_video_torchcodec.py  check_videos.py  client.py  convert2lerobot.py  decode_all_frames_pyav.py  decode_all_frames_torchcodec.py  decode_all_frames_torchvision.py  encode_gpu.py  multi_client.py  multi_client_test.py  server.py  single_client.py
scripts/format_convertors/tolerobot/: convert2lerobot.py
src/robocoin_dataset/: __init__.py  constant.py  csv_tags_to_yaml_util.py  dataset_info_util.py  dataset_readme_util.py  download.py  gen_info.py  gen_readme.py  local_datasets.py  log_config.py  upload.py
src/robocoin_dataset/annotation/: constant.py  subtask_annotation_client.py  subtask_annotation_server.py
src/robocoin_dataset/database/: database.py  models.py
src/robocoin_dataset/dataset_statics/: episode_frames_collector_hdf5.py  episode_frames_collector_mmk.py  episode_frames_collector_pika.py  episode_frames_collector_unitree.py
src/robocoin_dataset/distribution_computation/: constant.py  task_client.py  task_server.py
src/robocoin_dataset/hub_upload/: constant.py
src/robocoin_dataset/hubs/: abstract_hub.py  hf_hub.py  ms_hub.py
src/template_project/: __init__.py  main.py
tests/: test_main.py
tools/: bag_topic_inspector.py  rosbag_data_exporter.py  rosbag_dataset_analyzer.py  simple_bag_analyzer.py
(+151 files in other folders)
