[project]
name = "robocoin-dataset"
version = "0.1.0"
description = "robocoin dataset tools: such as format-convertor, hub-uploader, nas-uploader"
readme = "README.md"
requires-python = ">=3.9, <3.11"
authors = [{ name = "Your Name", email = "YourEmail@email.com" }]

dependencies = [
  # add your own dependencies
  # "dora-rs >= 0.3.9",
  # "pysurvive<=1.1.21",
  # "pyarrow >= 14.0.1",
  "modelscope",
  "huggingface_hub",
  "draccus",
  "jinja2",
  "numpy",
  "numpy-quaternion",
  "h5py",
  "pyyaml",
  "deepmerge",
  "opencv-python",
  "json-lines",
  "rosbags",
  "ruamel.yaml",
  "scipy",
  "natsort",
  "sqlalchemy",
  "websockets",
] # project dependencies

# scripts path
[project.scripts]
# template_project = "template_project.main:main"
collect_dataset_info_files = "robocoin_dataset.scripts.dataset_statics.collect_dataset_info_files:main"
fix_dataset_info_files = "robocoin_dataset.scripts.dataset_statics.fix_dataset_info_files:main"
collect_dataset_episode_frames_num = "robocoin_dataset.scripts.dataset_statics.collect_dataset_episode_frames_num:main"
list_devices = "robocoin_dataset.scripts.dataset_statics.tests.list_devices:main"
list_invalid_episode_num_info_files = "robocoin_dataset.scripts.dataset_statics.list_invalid_episode_num_info_files:main"
convert2lerobot = "robocoin_dataset.scripts.format_convertors.tolerobot.convert2lerobot:main"
# Add other scripts here

[project.optional-dependencies]
# dev dependencies
dev = ["ruff", "pre-commit"]
# test dependencies
test = ["pytest"]
# doc dependencies
docs = ["sphinx"]

# ruff format and lint config
[tool.ruff]
line-length = 100
indent-width = 4
# ruff format igonres
exclude = [".git", ".venv", "__pypackages__", "build", "dist", "node_modules"]

[tool.ruff.lint]
# 默认启用的规则集
select = ["E4", "E7", "E9", "F"] # 基础pycodestyle和Pyflakes规则
ignore = []
fixable = ["ALL"] # 所有规则都可自动修复
unfixable = []
extend-select = [
  "UP",   # Ruff's UP rule
  "PERF", # Ruff's PERF rule
  "RET",  # Ruff's RET rule
  "RSE",  # Ruff's RSE rule
  "NPY",  # Ruff's NPY rule
  "N",    # Ruff's N rule
  "I",    # isort (import sorting)
  "ANN",
]

# 允许下划线前缀的未使用变量
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# 格式化风格（与Black兼容）
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true      # 默认不格式化文档字符串中的代码示例

# setuptools config
[tool.setuptools.packages.find]
where = ["src"] # 源码目录
include = [
  "robocoin_dataset",
  # Add other dirs
  # "other_dir",
]

# add other configs
